- Support wxListCtrl columns alignment for all platforms and not just MSW
- Added wxDateSpan::operator==() and !=() (Lukasz Michalski)

Unix:

- fixed compilation on systems with zlib installed but < 1.1.3 version

wxGTK:

- fixed wxMenu::Remove (John Skiff and Benjamin Williams)
- made wxTextCtrl::EmulateKeyPress() work for Delete and Backspace

wxMSW:

- wxStaticBitmap doesn't stretch its bitmap any longer (like other ports)
- support for accelerator keys in the owner drawn menus (Derry Bryson)
- wxCaret::SetSize() doesn't hide the caret any longer as it used to
- wxCheckListBox::Check() doesn't send CHECKLISTBOX_TOGGLE event any more
- fixed bug with wxTR_EDIT_LABELS not workign with wxTR_MULTIPLE

OLD CHANGES
===========

INCOMPATIBLE CHANGES SINCE 2.2.x
================================

    Please take a few minutes to read the following list, especially
    paying attention to the most important changes which are marked
    with '!' in the first column.

    Also please note that you should ensure that WXWIN_COMPATIBILITY_2_2
    is defined to 1 if you wish to retain maximal compatibility with 2.2
    series -- however you are also strongly encouraged to try to compile
    your code without this define as it won't be default any longer in
    2.6 release.

    NB: if you want to build your program with different major versions
        of wxWindows you will probably find the wxCHECK_VERSION() macro
        (see the documentation) useful.


wxBase:

! wxArray<T>::Remove(size_t) has been removed to fix compilation problems
  under 64 bit architectures, please replace it with RemoveAt() in your
  code.

! wxArray<T> macros have been changed to fix runtime problems under 64 bit
  architectures and as a side effect of this WX_DEFINE_ARRAY() can only be
  used now for the pointer types, WX_DEFINE_ARRAY_INT should be used for the
  arrays containing non-pointers.

- wxObject::CopyObject() and Clone() methods were removed because they